--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ header {
 }
 
 header img {
-    width: 250px;
+    width: 220px;
     height: auto;
 }
 
@@ -27,6 +27,7 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 nav ul {
@@ -44,9 +45,54 @@ nav li {
 nav a {
     text-decoration: none;
     color: #050f3c;
+    font-size: 20px;
+    font-weight: 700;
     transition: color 0.3s ease;
+    padding: 5px;
 }
 
 nav a:hover {
     color: #b61817;
+    border-bottom: 3px solid #b61817;
+    font-weight: 800;
+    transition: color 0.3s ease, border-bottom 0.1s ease, font-weight 0.3 ease;
 }
+
+.nav-buttons{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-buttons ul{
+  list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-buttons li {
+    display: inline;
+    margin: 0 15px;
+    font-weight: 600;
+}
+
+.nav-buttons a {
+    text-decoration: none;
+    color: #b61817;
+    font-size: 20px;
+    font-weight: 700;
+    transition: color 0.3s ease;
+    padding: 10px 35px;
+    border: 2px solid #b61817;
+    border-radius: 10px;
+
+    
+}
+
+.nav-buttons a:hover{
+    color: #ffffff;
+    background-color: #b61817;
+    transition: all 0.3 ease;
+    
+}
+
