--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,62 @@ nav a:hover {
     transition: all 0.3 ease; 
 }
 
+@media (max-width: 1074px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+  }
+
+  header img {
+    margin-left: 0;
+    width: 180px;
+    margin-bottom: 10px;
+  }
+
+  nav {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+  }
+
+  nav li {
+    margin: 10px 0;
+    text-align: left;
+    padding: 0px 10px;
+  }
+
+  .nav-buttons {
+    margin: 0;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .nav-buttons ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .nav-buttons li {
+    margin: 10px 0;
+    padding: 0px 10px;
+  }
+
+  .nav-buttons a {
+    width: fit-content;
+    padding: 8px 20px;
+    font-size: 18px;
+  }
+
+  nav a, .nav-buttons a {
+    font-size: 18px;
+  }
+}
