--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -8,7 +8,7 @@ body {
     color: #050f3c;
 }
 
-header {
+.nav-bar {
     background-color: #ffffff;
     padding:20px 0px;
     text-align: center;
@@ -22,7 +22,7 @@ header {
     
 }
 
-header img {
+.nav-bar img {
     width: 200px;
     height: auto;
     margin-left: 100px;
@@ -106,20 +106,18 @@ nav a:hover {
     transition: color 0.3s ease;
     padding: 10px 35px;
     border: 2px solid #b61817;
-    border-radius: 10px;
-
-    
+    border-radius: 10px; 
 }
 
 .nav-buttons a:hover{
     color: #ffffff;
     background-color: #b61817;
-    transition: all 0.3 ease; 
+    transition: all 0.3s ease;
 }
 
 @media (max-width: 1011px) {
 
-  header {
+  .nav-bar {
     flex-direction: column;
     align-items: center;
     padding: 15px 0px 2px 0px;
@@ -141,7 +139,7 @@ nav a:hover {
     top: 20px;
   }
 
-  header img {
+  .nav-bar img {
     margin-left: 20px;
     width: 180px;
     margin-bottom: 10px;
