--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -8,6 +8,7 @@ body {
     color: #050f3c;
 }
 
+/* nav-bar Section */
 .nav-bar {
     background-color: #ffffff;
     padding:20px 0px;
@@ -20,6 +21,7 @@ body {
     top: 0;
     width: 100%;
     
+    
 }
 
 .nav-bar img {
@@ -29,7 +31,7 @@ body {
     
 }
 
-.header-mob{
+.nav-mob{
     display: flex;
     justify-content: space-between;
   }
@@ -41,8 +43,6 @@ body {
   font-size: 2rem;
   cursor: pointer;
 }
-
-
 
 nav {
     display: flex;
@@ -115,6 +115,78 @@ nav a:hover {
     transition: all 0.3s ease;
 }
 
+/* header Section */
+
+.header {
+  margin-top: 10vh;
+  display: flex;
+  text-align: left;
+  align-items: center;
+  justify-content: space-between;
+  min-height:75vh ;
+  
+}
+
+.header-content {
+    max-width: 800px;
+    margin-left: 100px;
+}
+
+.header img {
+    margin-bottom: 50px;
+    margin-right: 100px;
+    border-radius:20px;
+    margin-top: 60px;
+}
+
+.header h1 {
+    font-size: 4rem;
+    font-weight: 900;
+}
+
+.header p {
+    font-size: 1.2rem;
+    margin-bottom: 40px;
+    max-width: 700px;
+}
+
+.header .btn {
+    background: #b61817;
+    text-decoration: none;
+    color: #ffffff;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 20px;
+    transition: background 0.3s ease;
+}
+
+.header .btn:hover {
+    background: #a01716;
+}
+
+/*brand Section */
+.brand{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #050f3c;
+    height: 15vh;
+    min-width: 100vh;
+    padding: 0px 100px;
+}
+
+
+.brand img {
+
+    height: 6vh;
+    width: auto ;
+    opacity: 0.7;
+} 
+
+
+
 @media (max-width: 1011px) {
 
   .nav-bar {
@@ -124,12 +196,13 @@ nav a:hover {
     margin:0;
   }
 
-  .header-mob{
+  .nav-mob{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     margin: 0 10px;
+    z-index: 1000;
   }
 
  .hamburger {
@@ -147,15 +220,23 @@ nav a:hover {
 
   nav {
     width: 100%;
-    margin-bottom: px;
-    display: flex;
-    flex-direction: column;
+    position: relative;
+    background: #fff;
     border-top: 2px solid #e0e0e0;
-    display: none;
+    flex-direction: column;
+    display: block;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transition: max-height 0.4s cubic-bezier(0.4,0,0.2,1), opacity 0.3s ease;
   }
 
-  nav.open{
-    display: flex;
+  nav.open {
+    max-height: 500px;
+    opacity: 1;
+    pointer-events: auto;
+    
   }
 
   nav ul {
@@ -200,6 +281,18 @@ nav a:hover {
   nav a, .nav-buttons a {
     font-size: 16px;
   }
+
+  .brand {
+        flex-direction: row;
+        height: auto;
+        padding: 20px 2vw;
+        text-align: center;
+    }
+    .brand img {
+        height: 30px;
+        max-height: 30px;
+        width: auto;
+    }
 }
 
 
