--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -46,7 +46,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding:20px 35px;
+    padding:20px 0px;
 }
 
 #menu-icon{
@@ -91,7 +91,7 @@ header {
     right: 0;
     left: 0;
     background: 4px 4px 20px rgb(15 54 55 / 10%);
-    border: 1px solid var(--main-color);
+    border: 2px solid var(--main-color);
     border-radius: 0.5rem;
     clip-path: circle(0% at 100% 0);
 }
@@ -111,7 +111,7 @@ header {
 }
 
 
-@media (max-width:1200px){
+@media (max-width:1280px){
     .container {
         margin-right: 20px;
         margin-left: 20px;
@@ -120,6 +120,57 @@ header {
 }
 
 @media (max-width:991px){
-    
+    .nav{
+        padding: 15px 15px;
+    }
 
+
+}
+
+@media (max-width:830px){
+    .search-box input{
+        padding: 15px;
+    }
+
+    .nav{
+        padding: 10px 10px;
+    }
+
+    #menu-icon{
+        display: initial;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        display: flex;
+        background-color: var(--bg-color);
+        flex-direction: column;
+        text-align: center;
+        row-gap: 0.5rem;
+        box-shadow: 0 4px 20px rgba(15, 54, 55 / 20%);
+        clip-path: circle(0% at 0% 0);
+        transition: 0.6s;
+    }   
+
+    .navbar a{
+        display: block;
+        padding: 15px;;
+    }
+
+    .navbar a:hover,
+    .navbar .active{
+        border-bottom: none;
+        background-color: var(--main-color);
+        color: var(--bg-color);
+    }
+
+    .navbar.active{
+        clip-path: circle(144% at 100% 0);
+    }
+
+
+        
 }
