--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -42,6 +42,16 @@ header {
     z-index: 100;
 }
 
+header.shadow{
+    background: var(--bg-color);
+    box-shadow: 2px 4px 4px rgb(15 54 55 / 20%);
+    transition:0.5s ease;
+}
+
+header.shadow #search-icon{
+    color:var(--text-color);
+}
+
 .nav{
     display: flex;
     align-items: center;
